--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,25 +8,26 @@ body {
 }
 
 .container {
-	width: 960px;
+	/*width: 1170px;*/
 }
 
-/* jumbotron */
-.jumbotron {
+/*header */
+header {
+	width: 100%;
 	background-color: #000;
-	padding-bottom: 0px;
-	padding-top: 20px;
-	margin-bottom: 10px
 }
 
 /* navbar */
-.navbar {
-	margin-bottom: 0px;
-	font-size: 13px;
+.navbar-inverse {
+	background-color: inherit;
+	border: none;
+	margin: 20px 0 10px 0;
+
+	font-size: 14px;
 	a {
-		color: #fff;
+		color: #fff !important;
 		&:hover {
-			color: #86c840;
+			color: #86c840 !important;
 		}
 	}
 
@@ -37,8 +38,58 @@ body {
 			}
 		}
 	}
+
+	#put_logo {
+		float: right;
+	}
+
+	.sprites {
+		background-image: url(sprites.png);
+		background-repeat: no-repeat;
+		overflow: hidden;
+		float: right;
+		margin: 66px 12px 0 0;
+	}
+
+	#facebook {
+		width: 40px;
+		height: 40px;
+		background-position: 0 -1174px;
+		&:hover {
+			background-position-x: -95px;
+		}
+	}
+
+	#twitter {
+		width: 40px;
+		height: 40px;
+		background-position: 0 -1264px;
+		&:hover {
+			background-position-x: -95px;
+		}
+	}
+
+	#youtube {
+		width: 40px;
+		height: 40px;
+		background-position: 0 -1354px;
+		&:hover {
+			background-position-x: -95px;
+		}
+	}
 }
 
+.navbar-header {
+	float: none;
+	background-color: inherit;
+}
+
+.navbar-toggle {
+	background-color: #000;
+	border-radius: 60px;
+	float: none;
+	padding: 14px, 10px !important;
+}
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
