--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,10 +1,4 @@
-%header
-  .jumbotron
-    .container
-      .row
-        .col-md-10
-          = link_to image_tag("logo.png", alt: "Radio Afera"), '#', id: "logo"
-        .col-md-2
-          = link_to image_tag("put_logo.png", alt: "Radio Afera"), 'www.put.poznan.pl', id: "put_logo"
-      %nav.navbar
-        =render 'layouts/navbar'
+%header.header
+  .container
+    =render 'layouts/navbar'
+
