--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -32,4 +32,4 @@
       %li= link_to "Advertising", '#'
       %li= link_to "PRA", '#'
       %li= link_to "Contact", contact_path
-      %li= link_to "Sign up", '#'
+      %li= link_to "Sign up", signup_path
