--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,5 @@
     = render 'layouts/header'
     .container
       = yield
-    /= render 'layouts/footer'
+      /= render 'layouts/footer'
+      .debug= debug(params) if Rails.env.development?
