--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,8 @@
   %body
     = render 'layouts/header'
     .container
+      - flash.each do |message_type, message|
+        = content_tag(:div, message, class: "alert alert-#{message_type}")
       = yield
       /= render 'layouts/footer'
       .debug= debug(params) if Rails.env.development?
