--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,3 +2,21 @@
 
 %h1 Sign up
 %p to personalize your news feed!
+
+.row
+	.col-md-6.col-md-offset-3
+		= render 'shared/error_messages'
+		= form_for(@user) do |f|
+			= f.label :login
+			= f.text_field :login
+
+			= f.label :email
+			= f.email_field :email
+
+			= f.label :password
+			= f.password_field :password
+
+			= f.label :password_confirmation
+			= f.password_field :password_confirmation
+
+			= f.submit "Create my account", :class => "btn btn-primary"
