editing user profile without authentication

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -159,6 +159,11 @@ input {
   }
 }
 
+.form-control {
+	background: none;
+	color: inherit;
+}
+
 .checkbox {
   margin-top: -10px;
   margin-bottom: 10px;
