--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -37,7 +37,7 @@
           %a.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "data-target" => "#" } Profile
           %ul.dropdown-menu
             %li= link_to "Profile", current_user
-            %li= link_to "Settings", '#'
+            %li= link_to "Settings", edit_user_path(current_user)
             %li.divider
             %li= link_to "Log out", logout_path, method: "delete"
       - else
