--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,6 @@
-= provide(:title,'Sign up')
+= provide(:title, 'Edit user')
 
-%h1 Sign up
-%p to personalize your news feed!
+%h1 Update your profile
 
 .row
 	.col-md-6.col-md-offset-3
@@ -19,4 +18,8 @@
 			= f.label :password_confirmation
 			= f.password_field :password_confirmation, class: 'form-control'
 
-			= f.submit "Create my account", :class => "btn btn-primary"
+			= f.submit "Save changes", :class => "btn btn-primary"
+
+		.gravatar_edit
+			= gravatar_for @user
+			= link_to "Change", "http://gravatar.com/emails", { "target" => "blank" }
