--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,12 @@
+= provide(:title, 'All users')
+
 %h1 Users list
-.row
-	.col-md-2
-	.col-md-4
-	.col-md-6
+- @users.each do |user|
+	.row.users
+		.col-md-2.text-top
+			= gravatar_for user
+			= user.login
+		.col-md-3.text-middle
+			= user.email
+		.col-md-2
+			= link_to 'delete', 'delete_path'
