--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,9 @@
 = provide(:title, 'All users')
 
 %h1 Users list
+
+= will_paginate
+
 - @users.each do |user|
 	.row.users
 		.col-md-3.text-top
@@ -10,3 +13,5 @@
 			= user.email
 		.col-md-2
 			= link_to 'delete', 'delete_path'
+
+= will_paginate
