--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,14 +4,6 @@
 
 = will_paginate
 
-- @users.each do |user|
-	.row.users
-		.col-md-3.text-top
-			= gravatar_for user
-			= user.login
-		.col-md-3.text-middle
-			= user.email
-		.col-md-2
-			= link_to 'delete', 'delete_path'
+= render @users
 
 = will_paginate
