--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -5,4 +5,5 @@
 	.col-md-3.text-middle
 		= user.email
 	.col-md-2
-		= link_to 'delete', 'delete_path'
+	- if !current_user?(user)
+		= link_to 'delete', user, method: :delete, data: { confirm: "Are you sure?" }
